# asteroids-ish

./: CODEOWNERS  Cargo.toml  index.html
.cargo/: config.toml
.github/: labeler.yml
.github/workflows/: deploy.yml  labeler.yml  rust.yml
src/lib/: keybindings.rs  lib.rs
src/lib/bundles/: kinematics.rs  player.rs
src/lib/components/: acceleration.rs  health.rs  name.rs  player.rs  position.rs  rotation.rs  thrust.rs  velocity.rs
src/lib/plugins/: kinematics.rs  movement.rs
src/lib/systems/: accelerate.rs  apply_transforms.rs  damage_detection.rs  player_movement.rs  rotate.rs  spawn_camera.rs  spawn_player.rs  thrust.rs  track_player.rs  transform.rs
